--- a/_assets/css/custom.css
+++ b/_assets/css/custom.css
@@ -136,3 +136,24 @@ input[type=number] {
 .r_wrap_slider.r_wrap_slider_3::before {
     opacity: 0.3 !important;
 }
+
+#EJobs_FormPay {
+    padding: 45px 25px;
+    border: 1px solid #eee;
+    border-radius: 8px;
+}
+
+.powered {
+    margin: 0 auto;
+    width: 150px;
+    font-size: 11px;
+    margin-top: 10px;
+    background-color: rgba(0, 0, 0, .5);
+    color: #fff;
+    box-shadow: 0 0.6px 4.8px 0 rgb(0 0 0 / 12%);
+    padding: 5px;
+    text-align: center;
+    border-radius: 4px;
+    margin-top: 20px;
+    opacity: .8;
+}
